(executable
 (name main)
 (public_name patricia-tree-benchmarks)
 (package patricia-tree-benchmarks)
 (libraries
  bechamel
  notty.unix
  bechamel-notty
  csv
  qcheck
  ptmap
  containers-data
  patricia-tree
  colibri2_popop_lib
  colibri2_stdlib
  framac_intmap
  framac_idxmap
  framac_mergemap))
